--- a/index.css
+++ b/index.css
@@ -1,28 +1,44 @@
 html, body{
     margin: 0;
     padding: 0;
+    width: 100vw;
     height: 100vh;
+    align-items: center;
+    display: flex;
 }
 
 body *{
     box-sizing: border-box;
     display: flex;
+    flex: 1;
     justify-content: center;
+}
+
+body script{
+    display: none;
+}
+
+.square{
+    max-width: 100vh;
+    max-height: 100vw;
+    height: 100vh;
+    width: 100vw;
+    margin: auto;
 }
 
 .column{
     flex-direction: column;
 }
 
-.sizeCube{
-    height: 10rem;
-    width: 10rem;
+.sizeCubes{
+    width: 30rem;
+    height: 30rem;
 }
 
 .borderLine{
     border: 0.1em solid #00968824;
-    border-right: 0.1em solid #00968824;
     border-width: 0.2rem;
+    overflow: auto;
 }
 
 .padding{
@@ -30,14 +46,14 @@ body *{
 }
 
 .signX{
-    font-size: 8rem;
+    font-size: 6rem;
     align-items: center;
     color: #607d8bc4;
     font-family: cursive;
 }
 
 .signO{
-    font-size: 8rem;
+    font-size: 6rem;
     align-items: center;
     color: #ffa00075;
     font-family: cursive;
@@ -58,3 +74,14 @@ body *{
 .border-bottom{
     border-bottom: none;
 }
+
+/* @media screen and (max-width: 608px) {
+    html, body{
+        display: block;
+        overflow: hidden;
+    }
+
+    .square{
+        display: block;
+    }
+} */
